force-app/main/default/objects/Account/fields/Voucher_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Amount__c</fullName>
    <label>Voucher Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
                <isActive>false</isActive>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>