force-app/main/default/objects/Account/fields/Vulnerable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vulnerable_Flag__c</fullName>
    <formula>IF( Vulnerable__c = True, &quot;🔴&quot;, &quot;✖️&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*</label>
    <type>Text</type>
</CustomField>