force-app/main/default/objects/Account/fields/Whats_the_insurance_process__c.field-meta.xml
<CustomField>
    <fullName>Whats_the_insurance_process__c</fullName>
    <label>Whats the insurance process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>