force-app/main/default/objects/Account/recordTypes/Partner_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Partner_Accounts</fullName>
    <active>true</active>
    <description>For any Partner Accounts.</description>
    <label>Partner Accounts</label>
</RecordType>