force-app/main/default/objects/Account/listViews/Adrian_Partner_Account_Id_Mappings.listView-meta.xml
<ListView>
    <fullName>Adrian_Partner_Account_Id_Mappings</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Unique_ID_Legacy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner_Accounts</value>
    </filters>
    <label>Adrian Partner Account Id Mappings</label>
</ListView>