force-app/main/default/objects/Account/listViews/Created_by_LSZ.listView-meta.xml
<ListView>
    <fullName>Created_by_LSZ</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Created by LSZ</label>
</ListView>