force-app/main/default/objects/Account/listViews/Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>Partner_Accounts</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Channel__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Partner_ID__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner_Accounts</value>
    </filters>
    <label>Partner Accounts</label>
</ListView>